<resources>
    <string name="app_name">MobileDuck</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="login_input">Podaj nazwę użytkownika</string>
    <string name="save_button">Zapisz</string>
    <string name="preference_file_key">MobileDuckPreferences</string>
    <string name="preference_user_login">MobileDuckLogin</string>
    <string name="could_not_add_user">Nie można stworzyć użytkownika o podanym loginie</string>
    <string name="change_fragment_button">Zmień widok</string>
    <string name="add_list_button">Dodaj listę</string>
    <string name="add_friend_button">Dodaj przyjaciela</string>
    <string name="number_of_items">Liczba sztuk</string>
    <string name="item_name">Nazwa przedmiotu</string>
    <string name="add_friend">Dodaj przyjaciela</string>
    <string name="cancel">Anuluj</string>
    <string name="write_name_of_new_shoplist">Wpisz nazwę nowej listy</string>
    <string name="add_shoplist">Dodaj listę</string>
    <string name="cannot_download_item">Nie można pobrać itemów</string>
    <string name="added_to_shopping_list"> dodano do listy zakupów </string>
    <string name="could_not_add_to_list">Nie można dodać do listy</string>
    <string name="delete_friend">Usunąć przyjaciela?</string>
    <string name="are_u_sure">Jesteś pewien?</string>
    <string name="yes">TAK</string>
    <string name="no">NIE</string>
    <string name="list">Lista</string>
    <string name="show_friends_lists">Pokaż listy przyjaciół</string>
    <string name="name">Nazwa</string>
</resources>