<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="368dp"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:theme="@style/Theme.AppCompat.Light"
    tools:layout_editor_absoluteX="8dp"
    tools:layout_editor_absoluteY="8dp"
    xmlns:android="http://schemas.android.com/apk/res/android">
        <EditText
            android:id="@+id/shopListEditText"
            android:layout_width="367dp"
            android:layout_height="47dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/write_name_of_new_shoplist"
            tools:layout_editor_absoluteX="9dp"
            tools:layout_editor_absoluteY="14dp" />

    <Button
        android:id="@+id/addShoplistButton"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:onClick="onClickAddNewShoplist"
        android:text="@string/add_shoplist"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="70dp" />

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="362dp"
        android:layout_height="47dp"
        android:onClick="onClickCancel"
        android:text="@string/cancel"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="129dp" />
    </LinearLayout>
