<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.AppCompat.Light"
    tools:context="com.example.sylwia.mobileduck.MyShopActivity">

    <FrameLayout
        android:id="@+id/fragments_holder"
        android:layout_width="367dp"
        android:layout_height="417dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </FrameLayout>

    <Button
        android:id="@+id/add_friend_buttom"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/add_friend_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/change_fragment_button"
        app:layout_constraintStart_toEndOf="@+id/add_list_button"
        app:layout_constraintTop_toBottomOf="@+id/fragments_holder"
        app:layout_constraintVertical_bias="0.500" />

    <Button
        android:id="@+id/change_fragment_button"
        android:layout_width="110dp"
        android:layout_height="60dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/change_fragment_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragments_holder"
        app:layout_constraintVertical_bias="0.500" />

    <Button
        android:id="@+id/add_list_button"
        android:layout_width="110dp"
        android:layout_height="60dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/add_list_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragments_holder"
        app:layout_constraintVertical_bias="0.500" />
</android.support.constraint.ConstraintLayout>
